--- a/Notebooks/Preprocessing.ipynb
+++ b/Notebooks/Preprocessing.ipynb
@@ -120,7 +120,7 @@
    },
    "outputs": [],
    "source": [
-    "scipy.spatial.distance_matrix([scipy.spatial.distance.cityblock(stationDF.lat, stationDF.long), 70], \\\n",
+    "scipy.spatial.distance_matrix([scipy.spatial.distance.cityblock(stationDF.lat, stationDF.long), 70], \n",
     "                              [scipy.spatial.distance.cityblock(stationDF.lat, stationDF.long), 70])"
    ]
   },
@@ -279,6 +279,9 @@
     "trainingSet['start_time'] = trainingSet.start_date.dt.time\n",
     "trainingSet['start_hour'] = trainingSet.start_date.dt.hour\n",
     "trainingSet['start_minute'] = trainingSet.start_date.dt.minute\n",
+    "trainingSet['start_year'] = trainingSet.start_date.dt.year\n",
+    "trainingSet['start_month'] = trainingSet.start_date.dt.month\n",
+    "trainingSet['start_day'] = trainingSet.start_date.dt.day\n",
     "trainingSet['start_date'] = trainingSet.start_date.dt.date\n",
     "\n",
     "trainingSet['end_dayOfWeek'] = trainingSet.end_date.dt.dayofweek\n",
@@ -287,6 +290,9 @@
     "trainingSet['end_time'] = trainingSet.end_date.dt.time\n",
     "trainingSet['end_hour'] = trainingSet.end_date.dt.hour\n",
     "trainingSet['end_minute'] = trainingSet.end_date.dt.minute\n",
+    "trainingSet['end_year'] = trainingSet.end_date.dt.year\n",
+    "trainingSet['end_month'] = trainingSet.end_date.dt.month\n",
+    "trainingSet['end_day'] = trainingSet.end_date.dt.day\n",
     "trainingSet['end_date'] = trainingSet.end_date.dt.date"
    ]
   },
@@ -321,23 +327,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "trainingSet['start_year'] = trainingSet.start_date.dt.year\n",
-    "trainingSet['start_month'] = trainingSet.start_date.dt.month\n",
-    "trainingSet['start_day'] = trainingSet.start_date.dt.day\n",
-    "\n",
-    "trainingSet['end_year'] = trainingSet.end_date.dt.year\n",
-    "trainingSet['end_month'] = trainingSet.end_date.dt.month\n",
-    "trainingSet['end_day'] = trainingSet.end_date.dt.day"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
@@ -358,41 +347,6 @@
    "outputs": [],
    "source": [
     "list(trainingSet.columns.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "trainingSet = trainingSet[['id', \n",
-    "                           'duration', \n",
-    "                           'start_date',\n",
-    "                           'start_dayOfWeek',\n",
-    "                           'start_week',\n",
-    "                           'start_quarter', \n",
-    "                           'start_time',\n",
-    "                           'start_hour',\n",
-    "                           'start_minute',\n",
-    "                           'start_station_name', \n",
-    "                           'start_station_id', \n",
-    "                           'end_date', \n",
-    "                           'end_dayOfWeek',\n",
-    "                           'end_week',\n",
-    "                           'end_quarter', \n",
-    "                           'end_time',\n",
-    "                           'end_hour',\n",
-    "                           'end_minute',\n",
-    "                           'end_station_name', \n",
-    "                           'end_station_id', \n",
-    "                           'bike_id',\n",
-    "                           'subscription_type',\n",
-    "                           'zip_code']]"
    ]
   },
   {
@@ -540,8 +494,7 @@
    "source": [
     "# ///////////////////////////////////////////////////////////////////////////////////////////////\n",
     "# ///////////////////////////////////////////////////////////////////////////////////////////////\n",
-    "# ///////////////////////////////////////////////////////////////////////////////////////////////\n",
-    "# CORRER A PARTIR DE ACA"
+    "# ///////////////////////////////////////////////////////////////////////////////////////////////"
    ]
   },
   {
@@ -1208,7 +1161,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1232,7 +1187,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1243,7 +1200,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1254,7 +1213,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1473,7 +1434,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1484,7 +1447,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1495,7 +1460,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1506,7 +1473,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1517,7 +1486,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1528,7 +1499,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1539,7 +1512,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1550,7 +1525,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1587,7 +1564,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1601,11 +1580,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "trainingSet.columns.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet"
    ]
   },
   {
@@ -1652,20 +1646,6 @@
    },
    "outputs": [],
    "source": [
-    "listaStartDay.sort()\n",
-    "listaStartDay"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
     "durationNormalize = preprocessing.normalize(trainingSet.duration)\n",
     "trainingSet['duration'] = durationNormalize[0]\n",
     "maxTemperatureNormalize = preprocessing.normalize(trainingSet.max_temperature_c)\n",
@@ -1691,6 +1671,201 @@
    "outputs": [],
    "source": [
     "trainingSet.loc[:,['duration','max_temperature_c','min_temperature_c','max_humidity','max_sea_level_pressure_cm','precipitation_cm']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "# ///////////////////////////////////////////////////////////////////////////////////////////////\n",
+    "# ///////////////////////////////////////////////////////////////////////////////////////////////\n",
+    "# ///////////////////////////////////////////////////////////////////////////////////////////////\n",
+    "# CORRER A PARTIR DE ACA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "# Filtrado de OutLiers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet = pd.read_csv('../CSVs/improved_trip_train.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet.columns.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet.duration.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet.loc[:,['duration','start_year','start_month','start_day','end_year','end_month','end_day']].sort_values(by='duration',ascending = False).head(200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "duration = list(trainingSet.duration.sort_values(ascending = False).head(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "import plotly \n",
+    "import numpy as np\n",
+    "import plotly.graph_objs as go\n",
+    "import plotly.plotly as py\n",
+    "from plotly.graph_objs import *\n",
+    "plotly.offline.init_notebook_mode()\n",
+    "plotly.tools.set_credentials_file(username='AARTURI', api_key='qiQqOxKJXDlziMFzaB8j')\n",
+    "plotly.offline.init_notebook_mode(connected=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "trace0 = go.Scatter(\n",
+    "    y = duration,\n",
+    "    mode = 'markers',\n",
+    "    name = 'h=0.1'\n",
+    ")\n",
+    "\n",
+    "\n",
+    "data = [trace0]\n",
+    "fig = Figure(data=data)\n",
+    "plotly.offline.iplot(fig, filename='styled-scatter')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet = trainingSet.loc[trainingSet.duration < 1000000,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet[trainingSet['duration'] > 1000000]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## Save processed data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet.to_csv('../CSVs/improved_trip_train.csv', index=False)"
    ]
   }
  ],
