update with some feature filtering.

--- a/Notebooks/Pre - Ordenado.ipynb
+++ b/Notebooks/Pre - Ordenado.ipynb
@@ -692,6 +692,284 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# THIS CELL SHOULD NOT BE COPIED. THIS CELL IS ALLOWED TO BE PRESENT ONLY ONCE IN ALL THE NOTEBOOK\n",
+    "print \"Saving temp csvs...\"\n",
+    "trainingSet.to_csv('../CSVs/tempTraining.csv')\n",
+    "testingSet.to_csv('../CSVs/tempTesting.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet.to_pickle('../CSVs/finalTraining')\n",
+    "testingSet.to_pickle('../CSVs/finalTesting')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet = pd.read_csv('../CSVs/tempTraining.csv')\n",
+    "testingSet = pd.read_csv('../CSVs/tempTesting.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "# Data filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet.drop(['Unnamed: 0'],1,inplace=True)\n",
+    "testingSet.drop(['Unnamed: 0'],1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# Delete repeated data\n",
+    "trainingSet.drop(['date','year_y','month_y','weekday_y'],1,inplace=True)\n",
+    "trainingSet = trainingSet.rename(columns={'year_x':'year','month_x':'month','weekday_x': 'weekday'})\n",
+    "\n",
+    "testingSet.drop(['date','year_y','month_y','weekday_y'],1,inplace=True)\n",
+    "testingSet = testingSet.rename(columns={'year_x':'year','month_x':'month','weekday_x': 'weekday'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# Delete:\n",
+    "#     id: el id que identifica univocamente cada uno de los viajes \n",
+    "#         no proporciona informacion con la que el algoritmo pueda aprender\n",
+    "#     start_station_id y end_station_id: las estaciones ya estan discretizadas por nombre\n",
+    "trainingSet.drop(['id', 'start_station_id','end_station_id'],1,inplace=True)\n",
+    "\n",
+    "testingSet.drop(['id', 'start_station_id','end_station_id'],1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# Delete: \n",
+    "#     bike_id: la duracion del viaje es independiente de la bicicleta, \n",
+    "#         ya que son todas iguales (\"\") y se entregan sin juicio alguno (\"\")\n",
+    "trainingSet.drop(['bike_id'],1,inplace=True)\n",
+    "\n",
+    "testingSet.drop(['bike_id'],1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# Delete: \n",
+    "#     los dias como numero no aportan nada. E.g. 1 puede ser cualquier dia de la semana. \n",
+    "#     Nada en la vida se decide en base a numero de dia (salvo los ñoquis del 29 y martes/viernes 13). \n",
+    "trainingSet.drop(['start_day_1','start_day_2', 'start_day_3','start_day_4', 'start_day_5','start_day_6','start_day_7', \n",
+    "                  'start_day_8','start_day_9', 'start_day_10','start_day_11', 'start_day_12','start_day_13', \n",
+    "                  'start_day_14','start_day_15','start_day_16', 'start_day_17','start_day_18','start_day_19',\n",
+    "                  'start_day_20','start_day_21','start_day_22', 'start_day_23','start_day_24','start_day_25', \n",
+    "                  'start_day_26','start_day_27','start_day_28','start_day_29','start_day_30',\n",
+    "                  'start_day_31'],1,inplace=True)\n",
+    "trainingSet.drop(['end_day_1','end_day_2','end_day_3','end_day_4','end_day_5','end_day_6','end_day_7','end_day_8',\n",
+    "                  'end_day_9','end_day_10', 'end_day_11','end_day_12', 'end_day_13','end_day_14','end_day_15',\n",
+    "                  'end_day_16','end_day_17','end_day_18','end_day_19','end_day_20','end_day_21','end_day_22',\n",
+    "                  'end_day_23','end_day_24','end_day_25','end_day_26','end_day_27','end_day_28','end_day_29',\n",
+    "                  'end_day_30','end_day_31',],1,inplace=True)\n",
+    "\n",
+    "testingSet.drop(['start_day_1','start_day_2', 'start_day_3','start_day_4', 'start_day_5','start_day_6','start_day_7', \n",
+    "                  'start_day_8','start_day_9', 'start_day_10','start_day_11', 'start_day_12','start_day_13', \n",
+    "                  'start_day_14','start_day_15','start_day_16', 'start_day_17','start_day_18','start_day_19',\n",
+    "                  'start_day_20','start_day_21','start_day_22', 'start_day_23','start_day_24','start_day_25', \n",
+    "                  'start_day_26','start_day_27','start_day_28','start_day_29','start_day_30',\n",
+    "                  'start_day_31'],1,inplace=True)\n",
+    "testingSet.drop(['end_day_1','end_day_2','end_day_3','end_day_4','end_day_5','end_day_6','end_day_7','end_day_8',\n",
+    "                  'end_day_9','end_day_10', 'end_day_11','end_day_12', 'end_day_13','end_day_14','end_day_15',\n",
+    "                  'end_day_16','end_day_17','end_day_18','end_day_19','end_day_20','end_day_21','end_day_22',\n",
+    "                  'end_day_23','end_day_24','end_day_25','end_day_26','end_day_27','end_day_28','end_day_29',\n",
+    "                  'end_day_30','end_day_31',],1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# Delete:\n",
+    "#     La duracion del viaje no puede depender de algo del final del mismo. \n",
+    "#     Asi como el hambre que tengo no depende de lo que haya comido cuado ya comi, \n",
+    "#     la duracion del viaje no puede depender del momento final del mismo. \n",
+    "#     De la misma manera, razonando analogamente, podemos concluir que contrario a esto, \n",
+    "#     si influye el instante inicial del mismo\n",
+    "#     Retiro lo dicho para la estacion final, quedando valido el razonamiento unicamente \n",
+    "#     para cuestiones temporales. Aun asi esto esta abierto a discusion.\n",
+    "trainingSet.drop(['end_week', 'end_minute','end_dayOfWeek_id0','end_dayOfWeek_id1','end_dayOfWeek_id2',\n",
+    "                  'end_dayOfWeek_id3','end_dayOfWeek_id4','end_dayOfWeek_id5','end_dayOfWeek_id6', 'end_year_2013',\n",
+    "                  'end_year_2014','end_year_2015','end_month_1','end_month_2','end_month_3','end_month_4',\n",
+    "                  'end_month_5','end_month_6','end_month_7','end_month_8','end_month_9','end_month_10',\n",
+    "                  'end_month_11','end_month_12','end_quarter_1','end_quarter_2','end_quarter_3','end_quarter_4',  'end_hour0',\n",
+    "                  'end_hour1', 'end_hour2','end_hour3','end_hour4','end_hour5','end_hour6','end_hour7','end_hour8','end_hour9',\n",
+    "                  'end_hour10','end_hour11','end_hour12','end_hour13','end_hour14','end_hour15','end_hour16',\n",
+    "                  'end_hour17','end_hour18','end_hour19','end_hour20','end_hour21','end_hour22','end_hour23' ],\n",
+    "                 1,inplace=True)\n",
+    "\n",
+    "testingSet.drop(['end_week', 'end_minute','end_dayOfWeek_id0','end_dayOfWeek_id1','end_dayOfWeek_id2',\n",
+    "                  'end_dayOfWeek_id3','end_dayOfWeek_id4','end_dayOfWeek_id5','end_dayOfWeek_id6', 'end_year_2013',\n",
+    "                  'end_year_2014','end_year_2015','end_month_1','end_month_2','end_month_3','end_month_4',\n",
+    "                  'end_month_5','end_month_6','end_month_7','end_month_8','end_month_9','end_month_10',\n",
+    "                  'end_month_11','end_month_12','end_quarter_1','end_quarter_2','end_quarter_3','end_quarter_4',  'end_hour0',\n",
+    "                  'end_hour1', 'end_hour2','end_hour3','end_hour4','end_hour5','end_hour6','end_hour7','end_hour8','end_hour9',\n",
+    "                  'end_hour10','end_hour11','end_hour12','end_hour13','end_hour14','end_hour15','end_hour16',\n",
+    "                  'end_hour17','end_hour18','end_hour19','end_hour20','end_hour21','end_hour22','end_hour23' ],\n",
+    "                 1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "list(trainingSet.columns.values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "Dejo como incognita 'viajes'. No se realmente que efecto puede tener. Algo me dice que es cualquier cosa, pero no lo sabria justificar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "print sorted(trainingSet.business_day.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet.Normal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "testingSet.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
@@ -705,67 +983,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
     "print \"*****Normalizacion*****\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "print \"Saving temp csvs...\"\n",
-    "trainingSet.to_csv('../CSVs/tempTraining.csv')\n",
-    "testingSet.to_csv('../CSVs/tempTesting.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# trainingSet = pd.read_csv('../CSVs/tempTraining.csv')\n",
-    "# testingSet = pd.read_csv('../CSVs/tempTesting.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "print \"Normalizando data...\"\n",
-    "durationNormalize = preprocessing.normalize(trainingSet.duration)\n",
-    "trainingSet['duration'] = durationNormalize[0]\n",
-    "maxTemperatureNormalize = preprocessing.normalize(trainingSet.max_temperature_c)\n",
-    "trainingSet['max_temperature_c'] = maxTemperatureNormalize[0]\n",
-    "minTemperatureNormalize= preprocessing.normalize(trainingSet.min_temperature_c)\n",
-    "trainingSet['min_temperature_c'] = minTemperatureNormalize[0]\n",
-    "maxHumidityNormalize = preprocessing.normalize(trainingSet.max_humidity)\n",
-    "trainingSet['max_humidity'] = maxHumidityNormalize[0]\n",
-    "maxSeaLevelPressureNormalize = preprocessing.normalize(trainingSet.max_sea_level_pressure_cm)\n",
-    "trainingSet['max_sea_level_pressure_cm'] = maxSeaLevelPressureNormalize[0]\n",
-    "precipitationNormalize = preprocessing.normalize(trainingSet.precipitation_cm)\n",
-    "trainingSet['precipitation_cm'] = precipitationNormalize[0]"
    ]
   },
   {
@@ -799,27 +1023,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
-    "print \"Saving temp csvs...\"\n",
-    "trainingSet.to_csv('../CSVs/tempTraining.csv')\n",
-    "testingSet.to_csv('../CSVs/tempTesting.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
+    "# !!!!!!!! U L T I M A   C E L D A  !!!!!!!!\n",
     "print \"Saving to new csvs...\"\n",
     "print \"Saving trainingSet to ../CSVs/finalTraining.csv...\"\n",
     "trainingSet.to_csv('../CSVs/finalTraining.csv')\n",
