modificacion PRE ORDENADO

--- a/Notebooks/Pre - Ordenado.ipynb
+++ b/Notebooks/Pre - Ordenado.ipynb
@@ -980,7 +980,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Tincho: yo si sacaria viajes, no me aporto nada de nada en las predicciones y ademas no le veo mucho sentido"
    ]
@@ -1023,6 +1026,18 @@
    "outputs": [],
    "source": [
     "testingSet.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet.to_csv('../CSVs/finalTraining.csv')\n",
+    "testingSet.to_csv('../CSVs/finalTesting.csv')"
    ]
   }
  ],
