modificacion PRE ORDENADO

--- a/Notebooks/Pre - Ordenado.ipynb
+++ b/Notebooks/Pre - Ordenado.ipynb
@@ -691,8 +691,8 @@
     "binarizar(testingSet.start_station_id,'start_station_id', testingSet)\n",
     "\n",
     "print \"Binarizando end_station_id...\"\n",
-    "binarizar(trainingSet.end_station_id,'end_station_id ', trainingSet)\n",
-    "binarizar(testingSet.end_station_id,'end_station_id ', testingSet)"
+    "binarizar(trainingSet.end_station_id,'end_station_id', trainingSet)\n",
+    "binarizar(testingSet.end_station_id,'end_station_id', testingSet)"
    ]
   },
   {
@@ -1032,7 +1032,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
