--- a/Notebooks/tinchoMLP.ipynb
+++ b/Notebooks/tinchoMLP.ipynb
@@ -109,13 +109,13 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.neural_network import MLPClassifier\n",
-    "# Puedo variar el hidden_layer a mas grande o el random_state a mas grande\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "\n",
     "print ('fitting')\n",
     "\n",
-    "clf = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5, 2), random_state=1)\n",
+    "clf = MLPRegressor(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5, 2), random_state=1)\n",
     "\n",
-    "clf.fit(X_train, y_train)"
+    "clf.fit(X, y)"
    ]
   },
   {
